--- a/qphotosupps/volume11/image04.html
+++ b/qphotosupps/volume11/image04.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image03.html">Back<BR>03/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image4.jpg"><IMG
 			 SRC="../images/normal/volume11/image04.jpg" BORDER="0" WIDTH="513"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Next<BR>05/25</A></TD> 
 		</TR> 
