--- a/qphotosupps/volume11/image06.html
+++ b/qphotosupps/volume11/image06.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image05.html">Back<BR>05/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image6.jpg"><IMG
 			 SRC="../images/normal/volume11/image06.jpg" BORDER="0" WIDTH="563"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Next<BR>07/25</A></TD> 
 		</TR> 
