--- a/qphotosupps/volume11/image09.html
+++ b/qphotosupps/volume11/image09.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Back<BR>08/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image9.jpg"><IMG
 			 SRC="../images/normal/volume11/image09.jpg" BORDER="0" WIDTH="407"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Next<BR>10/25</A></TD> 
 		</TR> 
