--- a/qphotosupps/volume11/image10.html
+++ b/qphotosupps/volume11/image10.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Back<BR>09/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image10.jpg"><IMG
 			 SRC="../images/normal/volume11/image10.jpg" BORDER="0" WIDTH="632"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Next<BR>11/25</A></TD> 
 		</TR> 
