--- a/qphotosupps/volume11/image11.html
+++ b/qphotosupps/volume11/image11.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Back<BR>10/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image11.jpg"><IMG
 			 SRC="../images/normal/volume11/image11.jpg" BORDER="0" WIDTH="623"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Next<BR>12/25</A></TD> 
 		</TR> 
