--- a/qphotosupps/volume11/image13.html
+++ b/qphotosupps/volume11/image13.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Back<BR>12/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image13.jpg"><IMG
 			 SRC="../images/normal/volume11/image13.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="506"></TD> 
+			 HEIGHT="506"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Next<BR>14/25</A></TD> 
 		</TR> 
