--- a/qphotosupps/volume11/image16.html
+++ b/qphotosupps/volume11/image16.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Back<BR>15/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image16.jpg"><IMG
 			 SRC="../images/normal/volume11/image16.jpg" BORDER="0" WIDTH="712"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Next<BR>17/25</A></TD> 
 		</TR> 
