--- a/qphotosupps/volume11/image17.html
+++ b/qphotosupps/volume11/image17.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image16.html">Back<BR>16/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image17.jpg"><IMG
 			 SRC="../images/normal/volume11/image17.jpg" BORDER="0" WIDTH="444"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image18.html">Next<BR>18/25</A></TD> 
 		</TR> 
