--- a/qphotosupps/volume11/image20.html
+++ b/qphotosupps/volume11/image20.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image19.html">Back<BR>19/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image20.jpg"><IMG
 			 SRC="../images/normal/volume11/image20.jpg" BORDER="0" WIDTH="636"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image21.html">Next<BR>21/25</A></TD> 
 		</TR> 
