--- a/qphotosupps/volume11/image21.html
+++ b/qphotosupps/volume11/image21.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Back<BR>20/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image21.jpg"><IMG
 			 SRC="../images/normal/volume11/image21.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="580"></TD> 
+			 HEIGHT="580"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Next<BR>22/25</A></TD> 
 		</TR> 
