--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				HEIGHT="44" SRC="buttons/up/nplmail.gif" NAME="nplmail"
 				ALT="To access NPL e-mail"></A></P> 
 			 <P ALIGN="center"><A
-				HREF="https://my.virginmedia.com/my-apps/email/mailbox"
+				HREF="https://mail.virginmedia.com/appsuite/#!!&app=io.ox/mail&folder=default0/INBOX"
 				ONMOUSEOVER="return MouseOver('webmail','down_webmail')"
 				ONMOUSEOUT="MouseOut('webmail','up_webmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="44" SRC="buttons/up/webmail.gif" NAME="webmail"
